# ai-office-translator

./: .gitignore  README.md  requirements.txt
.github/workflows/: build-tauri.yml
src/: account_info.js  document.js  getApiKeys.js  get_languages.js  index.html  main.js  message.css  styles.css  translate.js  update.html  update.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: documents.rs  get_api_keys.rs  glossary.rs  lib.rs  main.rs  process_call.rs  translate.rs  utils.rs
src/config_files/: .gitignore
src/translator/: documents.py  glossary.py  translate.py  utils.py
